# mongo-mcp-server

mongo-service/: README.md  project_instructions.txt  project_knowledge.txt  pyproject.toml  requirements.txt  test_mcp.py
mongo-service/src/mongo_mcp_server/: __init__.py  config.py  server.py  test_mcp_server.py
mongo-service/src/mongo_mcp_server/resources/: __init__.py  collection_resource.py
mongo-service/src/mongo_mcp_server/tools/: __init__.py  query_tool.py
