[project]
name = "mongo-mcp-server"
version = "0.1.0"
description = "MongoDB MCP Server"
requires-python = ">=3.8"
dependencies = [
    "mcp",
    "fastapi",
    "uvicorn",
    "pymongo"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]